--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="app_name">zjwtnt_demo</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">首页</string>
 
 </resources>
