--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">首页</string>
-	<string name="sys_null"></string>
+    <string name="sys_null"></string>
+    <string name="title_activity_view_news">ViewNewsActivity</string>
+
 </resources>
