--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,8 +5,10 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">首页</string>
-     <string name="title_activity_main_details">详细介绍</string>
+    <string name="title_activity_main_details">详细介绍</string>
     <string name="sys_null"></string>
     <string name="title_activity_view_news">ViewNewsActivity</string>
+    <string name="loader_footer">加载更多</string>
+    <string name="title_activity_newslist">活动列表</string>
 
 </resources>
